<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutIconGroup">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/activity_main_title_width"
                android:layout_height="@dimen/activity_main_title_height"
                android:background="@drawable/title"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_main_space_title_function" />

            <Button
                android:layout_width="@dimen/activity_main_button_width"
                android:layout_height="@dimen/activity_main_button_height"
                android:textSize="@dimen/button_text_size"
                android:layout_gravity="center_horizontal"
                android:text="@string/learn"
                android:onClick="gotoTopics"/>
            <Button
                android:layout_width="@dimen/activity_main_button_width"
                android:layout_height="@dimen/activity_main_button_height"
                android:textSize="@dimen/button_text_size"
                android:layout_gravity="center_horizontal"
                android:text="@string/practice"
                android:onClick="gotoPractice"/>
            <Button
                android:layout_width="@dimen/activity_main_button_width"
                android:layout_height="@dimen/activity_main_button_height"
                android:textSize="@dimen/button_text_size"
                android:layout_gravity="center_horizontal"
                android:text="@string/test"
                android:onClick="gotoTest"/>
        </LinearLayout>
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/layoutIconGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/activity_main_icon_group_pađing_right"
        android:paddingBottom="@dimen/activity_main_icon_group_pađing_bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">
        <Button
            android:layout_width="@dimen/activity_main_icon_button_size"
            android:layout_height="@dimen/activity_main_icon_button_size"
            android:background="@drawable/rating"
            android:onClick="showRating"/>
        <Space
            android:layout_width="@dimen/activity_main_icon_button_space"
            android:layout_height="match_parent" />
        <Button
            android:layout_width="@dimen/activity_main_icon_button_size"
            android:layout_height="@dimen/activity_main_icon_button_size"
            android:background="@drawable/language"
            android:onClick="showSelectLanguage"/>
        <Space
            android:layout_width="@dimen/activity_main_icon_button_space"
            android:layout_height="match_parent" />
        <Button
            android:layout_width="@dimen/activity_main_icon_button_size"
            android:layout_height="@dimen/activity_main_icon_button_size"
            android:background="@drawable/setting"
            android:onClick="showSpeechRate"/>
    </LinearLayout>

</RelativeLayout>
