<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding">

    <LinearLayout
        android:id="@+id/layoutTopics"
        android:layout_width="@dimen/activity_practice_layout_topic_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/activity_padding"
        android:background="@drawable/practice_topic_shape"
        android:onClick="showChooseTopic">
        <TextView
            android:id="@+id/tvTopics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/spinner_topic_text_size"
            android:textStyle="bold"
            android:text="People"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="@dimen/activity_practice_triangle_size"
            android:layout_height="@dimen/activity_practice_triangle_size"
            android:layout_gravity="center_vertical"
            android:background="@drawable/triangle"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_practice_topic_margin_bottom" />

    <TextView
        android:id="@+id/tvCurrentOverTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/activity_practice_current_total_text_size"
        android:layout_gravity="center_horizontal"
        android:text="10/30"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/vpVocabulary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_practice_line_height"
        android:background="@color/activity_practice_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/btnSound"
                android:layout_width="@dimen/activity_practice_sound_size"
                android:layout_height="@dimen/activity_practice_sound_size"
                android:layout_centerInParent="true"
                android:background="@drawable/volume"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/cbShowWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="@dimen/activity_practice_checkbox_text_size"
                android:text="@string/show_word"
                android:onClick="showHideChecking"/>
            <CheckBox
                android:id="@+id/cbShowMean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="@dimen/activity_practice_checkbox_text_size"
                android:text="@string/show_mean"
                android:onClick="showHideChecking"/>

            <CheckBox
                android:id="@+id/cbShowPronunciation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="showHideChecking"
                android:text="@string/show_pronunciation"
                android:textSize="@dimen/activity_practice_checkbox_text_size" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
